--- a/lab_1/MME_lab1.ipynb
+++ b/lab_1/MME_lab1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,18 +30,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_productive(A, w): # returns [x, Ax, Ax + w, is_product]\n",
-    "    x = np.linalg.inv(np.eye(A.shape[0]) - A) @ w\n",
+    "    D = np.eye(A.shape[0]) - A\n",
+    "    if np.linalg.det(D) < 10**-10:\n",
+    "        return [0, 0, 0, False]\n",
+    "    x = np.linalg.inv(D) @ w\n",
     "    return [x, A @ x, A @ x + w, np.all(x >= 0)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,11 +65,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def delete_sectors(A, to_del):\n",
+    "def delete_sectors(A, to_del): # delete sectors from do_del\n",
     "    to_del_c = list({i for i in range(0, A.shape[0])}.difference(set(to_del)))\n",
     "    A22 = A[:, to_del][to_del]\n",
     "    A11 = A[:, to_del_c][to_del_c]\n",
@@ -78,11 +81,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def aggregate(A, w, to_aggr):\n",
+    "def aggregate(A, w, to_aggr): # aggregate sectors to groups from to_aggr\n",
     "    n = to_aggr.shape[0]\n",
     "    B = np.zeros((n, n))\n",
     "    x = np.linalg.inv(np.eye(A.shape[0]) - A) @ w\n",
@@ -94,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +146,7 @@
        "    <tr>\n",
        "      <th>1986</th>\n",
        "      <td>True</td>\n",
-       "      <td>0.551078</td>\n",
+       "      <td>0.551077</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1987</th>\n",
@@ -172,14 +175,14 @@
       "text/plain": [
        "     Productive  PF_eigenvalue\n",
        "1985       True       0.550485\n",
-       "1986       True       0.551078\n",
+       "1986       True       0.551077\n",
        "1987       True       0.543420\n",
        "1988       True       0.536549\n",
        "1989       True       0.533277\n",
        "1990       True       0.538223"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -262,50 +265,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(15, 15)"
+       "2.9103830456733704e-11"
       ]
      },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%precision 3\n",
-    "A = table['A1985']\n",
-    "to_del = [12, 13, 17]\n",
-    "to_del_c = list({i for i in range(0, A.shape[0])}.difference(set(to_del)))\n",
-    "\n",
-    "A_del = delete_sectors(A, to_del)\n",
-    "A_del.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-1.455e-11,  1.455e-11, -7.276e-12,  1.137e-13, -1.455e-11,\n",
-       "       -1.455e-11,  0.000e+00,  2.910e-11,  0.000e+00, -7.276e-12,\n",
-       "        2.910e-11,  1.455e-11,  2.910e-11,  0.000e+00,  1.455e-11])"
-      ]
-     },
-     "execution_count": 13,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# sector deletion\n",
+    "\n",
+    "%precision 3\n",
+    "A = table['A1985']\n",
+    "to_del = [12, 13, 17]\n",
+    "to_del_c = list({i for i in range(0, A.shape[0])}.difference(set(to_del)))\n",
+    "\n",
+    "A_del = delete_sectors(A, to_del)\n",
+    "\n",
     "w = table['w1985']\n",
     "w[to_del] = 0\n",
     "x = np.linalg.inv(np.eye(A.shape[0]) - A) @ w\n",
@@ -313,12 +296,12 @@
     "w_del = w[to_del_c]\n",
     "\n",
     "# check after deletion\n",
-    "x_del - A_del @ x_del - w_del"
+    "np.max(np.abs(x_del - A_del @ x_del - w_del))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +312,7 @@
        "       [0.174, 0.096, 0.432]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,16 +326,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-2.910e-11, -1.164e-10, -4.657e-10])"
+       "4.656612873077393e-10"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,21 +345,21 @@
     "w_new = np.array([w_del[to_aggr[i]].sum() for i in range(0, to_aggr.shape[0])])\n",
     "x_new = np.linalg.inv(np.eye(A_aggr.shape[0]) - A_aggr) @ w_new\n",
     "x_new_sum = np.array([x_del[to_aggr[i]].sum() for i in range(0, to_aggr.shape[0])])\n",
-    "x_new - x_new_sum"
+    "np.max(np.abs(x_new - x_new_sum))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5476779146889701"
+       "0.547678272433308"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,6 +367,32 @@
    "source": [
     "# Perron-Frobenius eigenvalue for aggregated matrix\n",
     "perron_frobenius(A_aggr)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.549]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Total aggregation\n",
+    "year = 1987\n",
+    "A = table['A' + str(year)]\n",
+    "w = table['w' + str(year)]\n",
+    "to_aggr = np.array([[i for i in range(0, 18)]])\n",
+    "A_aggr = aggregate(A, w, to_aggr)\n",
+    "A_aggr"
    ]
   }
  ],
