--- a/lab_1/MME_lab1.ipynb
+++ b/lab_1/MME_lab1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([ 54034.183, 133745.835,  31230.875,   1016.629,  91606.72 ,\n",
+       "         79831.062, 111714.477, 289295.959,  64807.   ,  39436.224,\n",
+       "        185693.652, 155139.576,  21659.947,      0.   , 255724.962,\n",
+       "        131574.415,  75406.946,   3943.606]),\n",
+       " array([ 34138.183,  82979.835,  22300.875,    676.629,  62128.72 ,\n",
+       "         56224.062,  71077.477, 120674.959,  33741.   ,  12130.224,\n",
+       "        109217.652,  49086.576,  21659.947,      0.   , 143326.962,\n",
+       "         89012.415,  49061.946,   3943.606]),\n",
+       " array([ 54034.183, 133745.835,  31230.875,   1016.629,  91606.72 ,\n",
+       "         79831.062, 111714.477, 289295.959,  64807.   ,  39436.224,\n",
+       "        185693.652, 155139.576,  21659.947,      0.   , 255724.962,\n",
+       "        131574.415,  75406.946,   3943.606]),\n",
+       " True]"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "year = 1985\n",
+    "is_productive(table['A' + str(year)], table['w' + str(year)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +215,7 @@
        "1990       True       0.538223"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +307,7 @@
        "2.9103830456733704e-11"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,8 +316,9 @@
     "# sector deletion\n",
     "\n",
     "%precision 3\n",
-    "A = table['A1985']\n",
-    "to_del = [12, 13, 17]\n",
+    "year = 1985\n",
+    "A = table['A' + str(year)]\n",
+    "to_del = np.array([12, 13, 17])\n",
     "to_del_c = list({i for i in range(0, A.shape[0])}.difference(set(to_del)))\n",
     "\n",
     "A_del = delete_sectors(A, to_del)\n",
@@ -295,13 +329,64 @@
     "x_del = x[to_del_c]\n",
     "w_del = w[to_del_c]\n",
     "\n",
+    "# A_del = table['A' + str(year)]\n",
+    "# w_del = table['w' + str(year)]\n",
+    "# x_del = is_productive(A_del, w_del)[0]\n",
+    "\n",
     "# check after deletion\n",
     "np.max(np.abs(x_del - A_del @ x_del - w_del))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'%.3f'"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%precision 3\n",
+    "#A_del"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([array([0, 1, 2, 3]), array([4, 5, 6, 7]),\n",
+       "       array([ 8,  9, 10, 11, 12, 13, 14])], dtype=object)"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "to_aggr = np.array([np.array([0, 1, 2, 3]), np.array([4, 5, 6, 7]), np.array([8, 9, 10, 11, 14, 15, 16])])\n",
+    "for j in to_aggr:\n",
+    "    for i in range(0, j.size):\n",
+    "        dif = (to_del < j[i]).sum()\n",
+    "        j[i] -= dif\n",
+    "to_aggr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -312,21 +397,21 @@
        "       [0.174, 0.096, 0.432]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# aggregation\n",
-    "to_aggr = np.array([[0, 1, 2, 3], [4, 5, 6, 7], [8, 9, 10, 11, 12, 13, 14]])\n",
+    "#to_aggr = np.array([[0, 1, 2, 3], [4, 5, 6, 7], [8, 9, 10, 11, 12, 13, 14]])\n",
     "A_aggr = aggregate(A_del, w_del, to_aggr)\n",
     "A_aggr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +420,7 @@
        "4.656612873077393e-10"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,16 +435,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.547678272433308"
+       "0.5476780859200046"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +465,7 @@
        "array([[0.549]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
